# NTL-Asteroid-Data-Hunter

./: README.md
Algorithms/Algorithm #1/: alg1_psyho.h  alg1_psyho.txt
Algorithms/Algorithm #2/: alg2_res1.h
Algorithms/Algorithm #3/: alg3_pfr.h
Algorithms/Algorithm #4/: alg4_nofto.h
Algorithms/Algorithm #5/: Kushal1 - Algorithm.tex  alg5_kushal1.h
Algorithms/Algorithm #5/Attachments/: NEO.nb  PSF.nb  detections.csv
Algorithms/Documentation & Instructions/: AsteroidDataHunter_MM2_Summary.odt  CMakeLists.txt  main.cpp
Docs/: Asteroid Date Hunter User Guide.docx
Linux Installer/: ADH Linux Installer Instructions.rtf
Mac Installer/jre/bundle/: Info.plist  version.plist
Mac Installer/jre/lib/: Xusage.txt  classlist  flavormap.properties  ir.idl  jvm.cfg  net.properties  orb.idl  server_jvm.cfg  swing.properties  tzmappings
Source Code/: build.bat  build.sh  run-test.bat  run-test.sh  start.bat  start.sh
Source Code/algo/linux/: .cproject  .project  CMakeLists.txt  alg1_psyho.h  alg1_psyho.txt
Source Code/algo/linux/data_prep/: CMakeLists.txt  list.txt  testdata.txt  traindata.txt  wget_testdata.sh  wget_traindata.sh
Source Code/algo/mac/: alg1_psyho.h  detector  main.cpp  makefile
Source Code/docs/: Asteroid.json.postman  DeploymentGuide.docx
Source Code/hunter/: pom.xml
Source Code/izpack/: Readme.txt  Unix_shortcutSpec.xml  Win_shortcutSpec.xml  install.bat  install.sh  install.xml  pom.xml
Source Code/run-jetty/: assemble.xml  pom.xml
Source Code/tester/: pom.xml  train.sh
Windows Installer/jre/: README.html
(+317 files in other folders)
